--- a/service-apache2.yml
+++ b/service-apache2.yml
@@ -1,18 +1,13 @@
 apiVersion: v1
-kind: ServiceAccount
+kind: Service
 metadata:
-  name: admin-user
-  namespace: kubernetes-dashboard
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: admin-user
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: cluster-admin
-subjects:
-- kind: ServiceAccount
-  name: admin-user
-  namespace: kubernetes-dashboard
+  name: apache2-service
+  namespace: webservers
+spec:
+  selector:
+    k8s-app: apache
+  ports:
+    - port: 443
+      targetPort: 8443
+      nodePort: 31000
+  type: NodePort
